--- a/server/package.json
+++ b/server/package.json
@@ -1,4 +1,7 @@
 {
+  "scripts": {
+    "start-server": "node server.js"
+  },
   "dependencies": {
     "express": "^4.18.1",
     "socket.io": "^4.5.1"
